--- a/packages/runtime-tools-management-console-webapp/dev-webapp/unsecured-runtime/pom.xml
+++ b/packages/runtime-tools-management-console-webapp/dev-webapp/unsecured-runtime/pom.xml
@@ -136,7 +136,7 @@
     <!-- Messaging -->
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+      <artifactId>quarkus-messaging-kafka</artifactId>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
