--- a/packages/sonataflow-uniforms/package.json
+++ b/packages/sonataflow-uniforms/package.json
@@ -12,19 +12,20 @@
   "bugs": {
     "url": "https://github.com/apache/incubator-kie-tools/issues"
   },
-  "types": "./dist/index.d.ts",
-  "main": "dist/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "main": "dist/esm/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build:dev": "rimraf dist && tsc -p tsconfig.json",
-    "build:prod": "pnpm lint && pnpm build:dev && pnpm test",
+    "build:dev": "rimraf dist && tsc --build tsconfig.cjs.json && tsc --build tsconfig.esm.json",
+    "build:prod": "rimraf dist && pnpm lint && pnpm test && rimraf dist && tsc --build tsconfig.cjs.json && tsc --build tsconfig.esm.json",
     "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\"",
     "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\""
   },
   "dependencies": {
     "@kie-tools/uniforms-patternfly": "workspace:*",
+    "@patternfly/react-code-editor": "5.4.3",
     "uniforms": "^3.10.2"
   },
   "devDependencies": {
@@ -59,7 +60,6 @@
     "webpack-merge": "^5.9.0"
   },
   "peerDependencies": {
-    "@patternfly/react-code-editor": "5.4.3",
     "react": ">=17.0.2 <19.0.0",
     "react-dom": ">=17.0.2 <19.0.0"
   }
