--- a/packages/sonataflow-uniforms/tsconfig.esm.json
+++ b/packages/sonataflow-uniforms/tsconfig.esm.json
@@ -2,6 +2,7 @@
   "extends": "@kie-tools/tsconfig/tsconfig.esm.json",
   "compilerOptions": {
     "esModuleInterop": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "dist/esm"
   }
 }
