--- a/packages/serverless-workflow-diagram-editor/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-lienzo/pom.xml
+++ b/packages/serverless-workflow-diagram-editor/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-lienzo/pom.xml
@@ -203,6 +203,16 @@
                   <artifactId>animate.css</artifactId>
                   <version>${version.animate_css}</version>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>org.webjars</groupId>
+                  <artifactId>jquery</artifactId>
+                  <version>${version.jquery}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.webjars</groupId>
+                  <artifactId>jquery-migrate</artifactId>
+                  <version>${version.jquery-migrate}</version>
+                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
@@ -234,12 +244,12 @@
                   <destinationFile
                   >${project.basedir}/src/main/resources/org/kie/workbench/common/stunner/client/lienzo/resources/js/bootstrap-select.min.js.noproc</destinationFile>
                 </fileSet>
-                <fileSet>
+                <!--                <fileSet>
                   <sourceFile
                   >${project.build.directory}/external-deps/org/gwtbootstrap3/client/resource/js/jquery-1.12.4.min.cache.js</sourceFile>
                   <destinationFile
                   >${project.basedir}/src/main/resources/org/kie/workbench/common/stunner/client/lienzo/resources/js/jquery-1.12.4.min.cache.js.noproc</destinationFile>
-                </fileSet>
+                </fileSet>-->
                 <fileSet>
                   <sourceFile
                   >${project.build.directory}/external-deps/org/gwtbootstrap3/client/resource/js/gwtbootstrap3.js</sourceFile>
