--- a/packages/serverless-workflow-diagram-editor/sw-editor/sw-editor-kogito-app/pom.xml
+++ b/packages/serverless-workflow-diagram-editor/sw-editor/sw-editor-kogito-app/pom.xml
@@ -272,6 +272,27 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.4.1</version>
+        <executions>
+          <execution>
+            <id>merge-after-j2cl</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>sh</executable>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <arguments>
+                <argument>${project.basedir}/scripts/merge.sh</argument>
+              </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
           <failOnError>false</failOnError>
