--- a/packages/serverless-workflow-diagram-editor/pom.xml
+++ b/packages/serverless-workflow-diagram-editor/pom.xml
@@ -145,8 +145,7 @@
 
     <!-- General -->
     <version.checkstyle>8.29</version.checkstyle>
-    <maven.compiler.target>11</maven.compiler.target>
-    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.release>17</maven.compiler.release>
     <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
     <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -201,7 +200,7 @@
     <version.org.codehaus.mojo.extra-enforcer-rules>1.4</version.org.codehaus.mojo.extra-enforcer-rules>
     <version.org.codehaus.selenium.plugin>2.3</version.org.codehaus.selenium.plugin>
     <version.org.commonjava.plugin>1.0</version.org.commonjava.plugin>
-    <version.org.javassist>3.26.0-GA</version.org.javassist>
+    <version.org.javassist>3.30.2-GA</version.org.javassist>
     <version.org.seleniumhq.selenium>4.18.1</version.org.seleniumhq.selenium>
     <version.org.jboss.maven-jdocbook-plugin>2.3.5</version.org.jboss.maven-jdocbook-plugin>
     <version.org.jboss.pressbang>2.0.0</version.org.jboss.pressbang>
