--- a/packages/accelerator-git-http-server/package.json
+++ b/packages/accelerator-git-http-server/package.json
@@ -24,8 +24,9 @@
   ],
   "scripts": {
     "build:dev": "rimraf dist && tsc",
-    "build:prod": "pnpm lint && rimraf dist && tsc",
-    "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\""
+    "build:prod": "pnpm lint && rimraf dist && tsc && pnpm test",
+    "lint": "run-script-if --bool \"$(build-env linters.run)\" --then \"kie-tools--eslint ./src\"",
+    "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\""
   },
   "dependencies": {
     "finalhandler": "^1.3.1",
@@ -33,13 +34,20 @@
   },
   "devDependencies": {
     "@kie-tools/eslint": "workspace:*",
+    "@kie-tools/jest-base": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/tsconfig": "workspace:*",
     "@types/finalhandler": "^1.2.3",
+    "@types/jest": "^29.5.12",
+    "@types/jest-when": "^3.5.5",
     "@types/node": "^24.10.11",
     "@types/serve-static": "^1.15.7",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "jest-when": "^3.6.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.9.3"
   }
 }
