--- a/packages/accelerator-git-http-server/tsconfig.json
+++ b/packages/accelerator-git-http-server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@kie-tools/tsconfig/tsconfig.cjs.json",
+  "extends": "@kie-tools/tsconfig/tsconfig.json",
   "compilerOptions": {
     "esModuleInterop": true
   }
