--- a/packages/serverless-workflow-vscode-extension/e2e-tests/resources/greeting-flow/pom.xml
+++ b/packages/serverless-workflow-vscode-extension/e2e-tests/resources/greeting-flow/pom.xml
@@ -34,7 +34,7 @@
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <version.quarkus>3.27.2</version.quarkus>
     <skipITs>true</skipITs>
-    <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+    <surefire-plugin.version>3.5.0</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
