Migrate from mockito-inline to mockito-core for Mockito 5.x compatibility
In Mockito 5.x, inline mocking is built into mockito-core and the
mockito-inline artifact is no longer published. Replaced all references
across maven-base, vscode-java-code-completion-extension-plugin,
serverless-workflow-diagram-editor, and stunner-editors.

--- a/packages/serverless-workflow-diagram-editor/pom.xml
+++ b/packages/serverless-workflow-diagram-editor/pom.xml
@@ -454,7 +454,7 @@
 
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-inline</artifactId>
+        <artifactId>mockito-core</artifactId>
         <version>${version.org.mockito}</version>
       </dependency>
 
