--- a/packages/maven-base/pom.xml
+++ b/packages/maven-base/pom.xml
@@ -401,7 +401,7 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-inline</artifactId>
+        <artifactId>mockito-core</artifactId>
         <version>${version.org.mockito}</version>
         <scope>test</scope>
       </dependency>
