--- a/packages/serverless-workflow-vscode-extension/e2e-tests/resources/greeting-flow/pom.xml
+++ b/packages/serverless-workflow-vscode-extension/e2e-tests/resources/greeting-flow/pom.xml
@@ -28,13 +28,13 @@
   <version>1.0</version>
   <properties>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
-    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-    <version.quarkus>2.13.1.Final</version.quarkus>
+    <version.quarkus>3.27.2</version.quarkus>
     <skipITs>true</skipITs>
-    <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+    <surefire-plugin.version>3.5.0</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
